--- a/index.html
+++ b/index.html
@@ -15,33 +15,101 @@
 </head>
 <body>
     <h1>Love Gin? Love Cocktails?</h1>
-    <h3>Learn how to make your favourite gin-based drinks with us!</h3>
-
-    <!-- Slideshow -->
-    <section>
-        <h3>World Famous Gin Cocktails</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat enim nostrum dolor deleniti id soluta illo deserunt, eius sapiente unde reprehenderit ratione officia nisi vel saepe accusantium. Ipsum, eius assumenda.</p>
-    </section>
-    <!-- /.slideshow -->
-    <hr>
+    <p class="lead">Learn how to make your favourite gin-based drinks with us!</p>
 
     <!-- Book a class -->
     <section>
         <h3>Book a private or group class with us today</h3>
-        <button class="uppercase">Book a class here</button>
+        <p>Private classes of 6 or more people get 20% off their booking</p>
+        <p class="text-muted"><small>You must be at least 18 years old to book a class with us.</small></p>
+        <button class="btn btn-dark uppercase btn-lg">Book a class here</button>
     </section>
     <!-- /.book a class -->
     <hr>
 
     <!-- Reviews -->
     <section>
-        <h3>Customer Reviews</h3>
-        <p>Great class</p>
-        <p>- Jane</p>
-        <p>So much fun!</p>
-        <p>- Joe</p>
+        <h3>Customer Reviews:</h3>
+            <blockquote class="blockquote">
+                <h5>Learnt some great techniques</h5>
+                <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
+                <p>-Marie Coleman</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
+            <br>
+            <blockquote class="blockquote">
+                <h5>I've now have a new favourite cocktail</h5>
+                <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
+                <p>-Helen Foster</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
+            <br>
+            <blockquote class="blockquote">
+                <h5>More confident behind the bar!</h5>
+                <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
+                <p>-Jamie Childs</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
     </section>
     <!-- /.reviews -->
+    <hr>
+
+    <!-- Slideshow & Cool Facts -->
+    <section>
+        <div class="bd-example">
+            <div id="carouselGinCaptions" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselGinCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselGinCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselGinCaptions" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/images/slideshow-gin-image-1.jpg" class="d-block w-100" alt="gin1">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/slideshow-gin-image-2.jpg" class="d-block w-100" alt="gin2">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/slideshow-gin-image-3.jpg" class="d-block w-100" alt="gin3">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselGinCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselGinCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+    </section>
+    <!-- /.slideshow & cool facts-->
     <hr>
 
     <!-- Footer -->
