adjust header text to overlay hero image

--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
 
 </head>
 <body>
-    <h1>Love Gin? Love Cocktails?</h1>
-    <p class="lead">Learn how to make your favourite gin-based drinks with us!</p>
-
     <!-- Book a class -->
-
     <section>
-        <h3>Book a private or group class with us today</h3>
-        <p>Private classes of 6 or more people get 20% off their booking</p>
-        <p class="text-muted"><small>You must be at least 18 years old to book a class with us.</small></p>
-        <button class="btn btn-dark uppercase btn-lg">Book a class here</button>
+      <img src="assets/images/hero-image-rangpur-gin.jpg" class="img-fluid hero-image" alt="rangpur gin">
+      <h1 class="header">Love Gin? Love Cocktails?</h1>
+      <p class="lead header">Learn how to make your favourite gin-based drinks with us!<br>Book a private or group class with us today<br>Private classes of 6 or more people get 20% off their booking</p>
+      <p class="text-muted header"><small>You must be at least 18 years old to book a class with us.</small></p>
+      <button class="btn btn-dark uppercase btn-lg header">Book a class here</button>
     </section>
     <!-- /.book a class -->
     <hr>
@@ -32,38 +29,46 @@
     <!-- Reviews -->
     <section>
         <h3>Customer Reviews:</h3>
-            <blockquote class="blockquote">
-                <h5>Learnt some great techniques</h5>
-                <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
-                <p>-Marie Coleman</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
+          <div class="row">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+              <blockquote class="blockquote">
+                  <h5>Learnt some great techniques</h5>
+                  <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
+                  <p>-Marie Coleman</p>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+              </blockquote>
+            </div>
             <br>
-            <blockquote class="blockquote">
-                <h5>I've now have a new favourite cocktail</h5>
-                <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
-                <p>-Helen Foster</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+              <blockquote class="blockquote">
+                  <h5>I've now have a new favourite cocktail</h5>
+                  <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
+                  <p>-Helen Foster</p>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+              </blockquote>
+            </div>
             <br>
-            <blockquote class="blockquote">
-                <h5>More confident behind the bar!</h5>
-                <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
-                <p>-Jamie Childs</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-            </blockquote>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+              <blockquote class="blockquote">
+                  <h5>More confident behind the bar!</h5>
+                  <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
+                  <p>-Jamie Childs</p>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+              </blockquote>
+            </div>
+        </div>
     </section>
     <!-- /.reviews -->
     <hr>
