add cta to hero image on homepage

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <!-- Book a class -->
     <section>
       <img src="assets/images/hero-image-rangpur-gin.jpg" class="img-fluid hero-image" alt="rangpur gin">
-      <h1 class="header">Love Gin? Love Cocktails?</h1>
-      <p class="lead header">Learn how to make your favourite gin-based drinks with us!<br>Book a private or group class with us today<br>Private classes of 6 or more people get 20% off their booking</p>
-      <p class="text-muted header"><small>You must be at least 18 years old to book a class with us.</small></p>
-      <button class="btn btn-dark uppercase btn-lg header">Book a class here</button>
+      <div id="homepage-cta">
+        <h3>Love Gin?</h3>
+        <p class="lead">Learn how to make your favourite gin-based drinks with us!*</p>
+        <button type="button" class="btn btn-light">Sign Up</button>
+      </div>
+      <p class="text-muted">*You must be at least 18 years old to book a class with us</p>
     </section>
     <!-- /.book a class -->
     <hr>
@@ -30,7 +32,7 @@
     <section>
         <h3>Customer Reviews:</h3>
           <div class="row">
-            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4">
               <blockquote class="blockquote">
                   <h5>Learnt some great techniques</h5>
                   <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
@@ -43,7 +45,7 @@
               </blockquote>
             </div>
             <br>
-            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4">
               <blockquote class="blockquote">
                   <h5>I've now have a new favourite cocktail</h5>
                   <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
@@ -56,7 +58,7 @@
               </blockquote>
             </div>
             <br>
-            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4">
               <blockquote class="blockquote">
                   <h5>More confident behind the bar!</h5>
                   <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
