adjust styling to the body of the page and import Google fonts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <!-- Font Awesome Icon Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Google Fonts -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+    </style>
 </head>
 <body>
     <!-- Book a class -->
@@ -36,7 +42,7 @@
               <blockquote class="blockquote">
                   <h5>Learnt some great techniques</h5>
                   <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
-                  <p>-Marie Coleman</p>
+                  <p>- Marie Coleman</p>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -49,7 +55,7 @@
               <blockquote class="blockquote">
                   <h5>I've now have a new favourite cocktail</h5>
                   <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
-                  <p>-Helen Foster</p>
+                  <p>- Helen Foster</p>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -62,7 +68,7 @@
               <blockquote class="blockquote">
                   <h5>More confident behind the bar!</h5>
                   <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
-                  <p>-Jamie Childs</p>
+                  <p>- Jamie Childs</p>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -119,7 +125,7 @@
     <!-- Footer -->
     <section>
         <footer>
-            <h5>Contact Us</h5>
+            <h3>Contact Us</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci inventore velit placeat eaque culpa quia molestias! Cumque pariatur, iure exercitationem eaque animi inventore consectetur accusamus dolorem? Qui ea mollitia nam.</p>
         </footer>
     </section>
