--- a/index.html
+++ b/index.html
@@ -22,38 +22,44 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">GinTopia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">All About Gin</a>
+              <a class="nav-link" href="#">All About GIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Book a Class</a>
+              <a class="nav-link" aria-current="page" href="#">Book a Class</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
       </div>
     </nav>
     <!-- /. navbar -->
     <!-- Book a class -->
-    <section>
-      <img src="assets/images/hero-image-rangpur-gin.jpg" class="img-fluid hero-image" alt="rangpur gin">
-      <div id="homepage-cta">
-        <h3>Love Gin?</h3>
-        <p class="lead">Learn how to make your favourite gin-based drinks with us!*</p>
+    <div class="card bg-dark text-white">
+      <img class="card-img" src="assets/images/hero-image-rangpur-gin.jpg" alt="rangpur gin">
+      <div class="card-img-overlay">
+        <h3 class="card-title">Love Gin?</h3>
+        <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
         <button type="button" class="btn btn-light">Sign Up</button>
       </div>
-      <p class="text-muted">*You must be at least 18 years old to book a class with us</p>
-    </section>
+      <div class="card-img-overlay">
+        <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
+      </div>
+    </div>
     <!-- /.book a class -->
     <hr>
     <!-- Reviews -->
