--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="card-img-overlay">
         <h3 class="card-title">Love Gin?</h3>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <button type="button" class="btn btn-light">Sign Up</button>
+        <button type="button" class="btn btn-light">Book Now</button>
       </div>
       <div class="card-img-overlay">
         <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
@@ -108,7 +108,7 @@
     </section>
     <!-- /.reviews -->
     <hr>
-    <!-- Slideshow & Cool Facts -->
+    <!-- Slideshow -->
     <section>
       <h3>Gallery</h3>
         <div id="carouselGinIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -118,6 +118,9 @@
               <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
               <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselGinIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -135,6 +138,15 @@
               <div class="carousel-item">
                 <img src="assets/images/orange-gin.jpg" class="d-block w-100" alt="orange-coloured gin drink">
               </div>
+              <div class="carousel-item">
+                <img src="assets/images/gin-shots.jpg" class="d-block w-100" alt="shot of gin">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/images/group-of-women-drinking-gin.jpg" class="d-block w-100" alt="women drinking gin">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/images/yellow-gin.jpg" class="d-block w-100" alt="yellow-coloured gin drink">
+              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselGinIndicators" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -146,17 +158,46 @@
             </button>
           </div>
     </section>
-    <!-- /.slideshow & cool facts-->
+    <!-- /.slideshow -->
     <hr>
     <!-- Footer -->
     <section>
-        <footer>
-            <h3>Contact Us</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci inventore velit placeat eaque culpa quia molestias! Cumque pariatur, iure exercitationem eaque animi inventore consectetur accusamus dolorem? Qui ea mollitia nam.</p>
+        <footer class="text-center text-white" style="background-color: #d3b488;">
+          <!-- Social links grid container -->
+          <div class="container p-4 pb-0">
+            <!-- Facebook -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-facebook-f"></i></a>
+            <!-- Twitter -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-twitter"></i></a>
+            <!-- Instagram -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-instagram"></i></a>
+            <!-- /.social links grid container -->
+            <br>
+            <hr>
+            <!-- Section: CTA -->
+            <section class="">
+              <p class="d-flex justify-content-center align-items-center">
+                <span class="me-3">Book a class with us!</span>
+                <button type="button" class="btn btn-outline-light btn-rounded">
+                  Book Now
+                </button>
+              </p>
+            </section>
+            <!-- ./section: CTA -->
+          </div>
+          <!-- /.grid container -->
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: #967950;">
+            © 2021 Copyright:
+            <a class="text-white" href="https://gintopia.com/">GinTopia.com</a>
+          </div>
+          <!-- /.copyright -->
         </footer>
     </section>
     <!-- /.footer -->
-    <hr>
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/eaf248fb94.js" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundles -->
