add a sign in and sign up option to nav bar

--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
               <a class="nav-link" href="#">All About GIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Book a Class</a>
+              <a class="nav-link" href="#">Book a Class</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          <a class="nav-link" href="#">Sign In / Sign Up</a>
         </div>
       </div>
     </nav>
@@ -64,46 +61,46 @@
     <hr>
     <!-- Reviews -->
     <section>
-        <h3>Customer Reviews:</h3>
-          <div class="row">
-            <div class="col-12 col-sm-4">
-              <blockquote class="blockquote">
-                  <h5>Learnt some great techniques</h5>
-                  <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
-                  <p>- Marie Coleman</p>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-              </blockquote>
-            </div>
-            <br>
-            <div class="col-12 col-sm-4">
-              <blockquote class="blockquote">
-                  <h5>I've now have a new favourite cocktail</h5>
-                  <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
-                  <p>- Helen Foster</p>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-              </blockquote>
-            </div>
-            <br>
-            <div class="col-12 col-sm-4">
-              <blockquote class="blockquote">
-                  <h5>More confident behind the bar!</h5>
-                  <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
-                  <p>- Jamie Childs</p>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-              </blockquote>
-            </div>
+      <h3>Customer Reviews:</h3>
+        <div class="row">
+          <div class="col-12 col-sm-4">
+            <blockquote class="blockquote">
+                <h5>Learnt some great techniques</h5>
+                <p class="customer-quote">"I hosted a dinner party and used some of the great techniques that I learnt from this class and my guests loved the gin cocktails! They said it was better than the drinks they get from their local pub."</p>
+                <p>- Marie Coleman</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
+          </div>
+          <br>
+          <div class="col-12 col-sm-4">
+            <blockquote class="blockquote">
+                <h5>I've now have a new favourite cocktail</h5>
+                <p class="customer-quote">"I usually drink the class Gin & Tonic with Hendricks gin and Elderflower tonic water, but in this class I discovered Sloe Gin, and that drink is an absolute game changer. I will be making this more at home and ordering it on a night out!"</p>
+                <p>- Helen Foster</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
+          </div>
+          <br>
+          <div class="col-12 col-sm-4">
+            <blockquote class="blockquote">
+                <h5>More confident behind the bar!</h5>
+                <p class="customer-quote">"I love entertaining guests and I work part time at my local bar. This class gave me the confidence I needed to make drinks that I know my guests will love but also how to impress customers who come to my bar by making off menu cocktails."</p>
+                <p>- Jamie Childs</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </blockquote>
+          </div>
         </div>
     </section>
     <!-- /.reviews -->
@@ -162,40 +159,40 @@
     <hr>
     <!-- Footer -->
     <section>
-        <footer class="text-center text-white" style="background-color: #d3b488;">
-          <!-- Social links grid container -->
-          <div class="container p-4 pb-0">
-            <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-facebook-f"></i></a>
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-twitter"></i></a>
-            <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-instagram"></i></a>
-            <!-- /.social links grid container -->
-            <br>
-            <hr>
-            <!-- Section: CTA -->
-            <section class="">
-              <p class="d-flex justify-content-center align-items-center">
-                <span class="me-3">Book a class with us!</span>
-                <button type="button" class="btn btn-outline-light btn-rounded">
-                  Book Now
-                </button>
-              </p>
-            </section>
-            <!-- ./section: CTA -->
-          </div>
-          <!-- /.grid container -->
-          <!-- Copyright -->
-          <div class="text-center p-3" style="background-color: #967950;">
-            © 2021 Copyright:
-            <a class="text-white" href="https://gintopia.com/">GinTopia.com</a>
-          </div>
-          <!-- /.copyright -->
-        </footer>
+      <footer class="text-center text-white" style="background-color: #d3b488;">
+        <!-- Social links grid container -->
+        <div class="container p-4 pb-0">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-facebook-f"></i></a>
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-twitter"></i></a>
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-instagram"></i></a>
+          <!-- /.social links grid container -->
+          <br>
+          <hr>
+          <!-- Section: CTA -->
+          <section class="">
+            <p class="d-flex justify-content-center align-items-center">
+              <span class="me-3">Book a class with us!</span>
+              <button type="button" class="btn btn-outline-light btn-rounded">
+                Book Now
+              </button>
+            </p>
+          </section>
+          <!-- ./section: CTA -->
+        </div>
+        <!-- /.grid container -->
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: #967950;">
+          © 2021 Copyright:
+          <a class="text-white" href="https://gintopia.com/">GinTopia.com</a>
+        </div>
+        <!-- /.copyright -->
+      </footer>
     </section>
     <!-- /.footer -->
     <!-- font awesome script -->
