media queries for card overlay text on hero image for all sizes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
-          <a class="nav-link" href="#">Sign In / Sign Up</a>
+          <a class="nav-link sign-up" href="#">Sign In / Sign Up</a>
         </div>
       </div>
     </nav>
@@ -49,7 +49,7 @@
     <div class="card bg-dark text-white">
       <img class="card-img" src="assets/images/hero-image-rangpur-gin.jpg" alt="rangpur gin">
       <div class="card-img-overlay">
-        <h3 class="card-title">Love Gin?</h3>
+        <p class="card-title">Love Gin?</p>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
         <button type="button" class="btn btn-light">Book Now</button>
       </div>
