add new pages to the website

--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">All About GIn</a>
+              <a class="nav-link" href="allaboutgin.html">All About GIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Book a Class</a>
+              <a class="nav-link" href="bookaclass.html">Book a Class</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="contactus.html">Contact Us</a>
             </li>
           </ul>
-          <a class="nav-link sign-up" href="#">Sign In / Sign Up</a>
+          <a class="nav-link sign-up" href="signup.html">Sign In / Sign Up</a>
         </div>
       </div>
     </nav>
-    <!-- /. navbar -->
+    <!-- /.navbar -->
     <!-- Book a class -->
     <div class="card bg-dark text-white">
       <img class="card-img" src="assets/images/hero-image-rangpur-gin.jpg" alt="rangpur gin">
       <div class="card-img-overlay">
         <p class="card-title">Love Gin?</p>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <button type="button" class="btn btn-light">Book Now</button>
+        <a href="#" class="btn btn-light stretched-link">Book Now</a>
       </div>
       <div class="card-img-overlay">
         <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
@@ -60,7 +60,7 @@
     <!-- /.book a class -->
     <hr>
     <!-- Reviews -->
-    <section>
+    <section class="quote">
       <h3>Customer Reviews:</h3>
         <div class="row">
           <div class="col-12 col-sm-4">
