add template for all about gin page and remove break between social links and cta

--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">GinTopia</a>
+        <a class="navbar-brand" href="index.html">GinTopia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +45,56 @@
       </div>
     </nav>
     <!-- /.navbar -->
-    
+    <!-- Gin Introduction -->
+    <section>
+      <h3>What makes Gin so amazing?</h3>
+    </section>
+    <!-- /.gin introduction -->
+    <hr>
+    <!-- All About Gin -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Tanquery<p>Gin #1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Hendricks<p>Gin #2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Gordons<p>Gin #3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">Photo</div>
+        <div class="col-sm-8">Pink Gin<p>Gin #4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">Photo</div>
+        <div class="col-sm-8">Store Brand<p>Gin #5 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Tanquery<p>Gin #1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Hendricks<p>Gin #2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Photo</div>
+        <div class="col-md-8">Gordons<p>Gin #3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">Photo</div>
+        <div class="col-sm-8">Pink Gin<p>Gin #4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">Photo</div>
+        <div class="col-sm-8">Store Brand<p>Gin #5 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam sunt quod laborum id facere modi fugit officiis vitae eaque numquam, doloribus eum corrupti et consectetur error eos qui quae.</p></div>
+      </div>
+    </div>
+    <!-- /.all about gin -->
     <hr>
     <!-- Footer -->
     <section>
@@ -53,27 +102,25 @@
         <!-- Social links grid container -->
         <div class="container p-4 pb-0">
           <!-- Facebook -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.facebook.com" target="_blank" role="button"
           ><i class="fab fa-facebook-f"></i></a>
           <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.twitter.com" target="_blank" role="button"
           ><i class="fab fa-twitter"></i></a>
           <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.instagram.com" target="_blank" role="button"
           ><i class="fab fa-instagram"></i></a>
-          <!-- /.social links grid container -->
-          <br>
-          <hr>
-          <!-- Section: CTA -->
-          <section class="">
-            <p class="d-flex justify-content-center align-items-center">
-              <span class="me-3">Book a class with us!</span>
-              <button type="button" class="btn btn-outline-light btn-rounded">
-                Book Now
-              </button>
-            </p>
-          </section>
-          <!-- ./section: CTA -->
+        </div>
+        <!-- /.social links grid container -->
+        <hr>
+        <!-- Section: CTA -->
+        <section class="">
+          <p class="d-flex justify-content-center align-items-center">
+            <span class="me-3">Book a class with us!</span>
+            <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+          </p>
+        </section>
+        <!-- ./section: CTA -->
         </div>
         <!-- /.grid container -->
         <!-- Copyright -->
