--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">GinTopia</a>
+        <a class="navbar-brand" href="index.html">GinTopia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,7 +51,7 @@
       <div class="card-img-overlay">
         <p class="card-title">Love Gin?</p>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <a href="#" class="btn btn-light stretched-link">Book Now</a>
+        <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
       </div>
       <div class="card-img-overlay">
         <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
@@ -163,27 +163,25 @@
         <!-- Social links grid container -->
         <div class="container p-4 pb-0">
           <!-- Facebook -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.facebook.com" target="_blank" role="button"
           ><i class="fab fa-facebook-f"></i></a>
           <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.twitter.com" target="_blank" role="button"
           ><i class="fab fa-twitter"></i></a>
           <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          <a class="btn btn-outline-light btn-floating m-1" href="http://www.instagram.com" target="_blank" role="button"
           ><i class="fab fa-instagram"></i></a>
-          <!-- /.social links grid container -->
-          <br>
-          <hr>
-          <!-- Section: CTA -->
-          <section class="">
-            <p class="d-flex justify-content-center align-items-center">
-              <span class="me-3">Book a class with us!</span>
-              <button type="button" class="btn btn-outline-light btn-rounded">
-                Book Now
-              </button>
-            </p>
-          </section>
-          <!-- ./section: CTA -->
+        </div>
+        <!-- /.social links grid container -->
+        <hr>
+        <!-- Section: CTA -->
+        <section class="">
+          <p class="d-flex justify-content-center align-items-center">
+            <span class="me-3">Book a class with us!</span>
+            <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+          </p>
+        </section>
+        <!-- ./section: CTA -->
         </div>
         <!-- /.grid container -->
         <!-- Copyright -->
