remove stretched-link from cta button at the bottom of the page to fix navigation issue

--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -117,7 +117,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+            <a class="btn btn-light" href="#">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
