--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="card-img-overlay">
         <p class="card-title">Love Gin?</p>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+        <a class="btn btn-light stretched-link" href="#">Book Now</a>
       </div>
       <div class="card-img-overlay">
         <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
@@ -153,9 +153,10 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </section>
     <!-- /.slideshow -->
+    <br>
     <hr>
     <!-- Footer -->
     <section>
@@ -175,10 +176,10 @@
         <!-- /.social links grid container -->
         <hr>
         <!-- Section: CTA -->
-        <section class="">
+        <section>
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
+            <a class="btn btn-light" href="#">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
