--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -45,25 +45,19 @@
       </div>
     </nav>
     <!-- /.navbar -->
-    <hr>
-    <!-- Gin Introduction -->
-    <section>
-      <h3>3 Quick Facts About Gin</h3>
-      <div class="gin-facts">
-        <p><i class="far fa-lightbulb"></i> Unlike drinks that are classified according to their distilling technique or the ingredients used, gin is a matter of taste. By which we mean that gin is only gin if it has juniper as its predominant flavour and an alcohol content of at least 37.5% ABV.</p>
-        <p><i class="far fa-lightbulb"></i> Now, we may be a nation of gin and tonic devotees, but that doesn't mean that your imagination has to stop at 'ice and a slice' (of lemon, or even lime) when making one. Take a look at the bottle to find what botanicals your gin was made with and choose a few as your garnish. Cucumber, coriander, chilli, a bay leaf, a twist of black pepper - when it comes to the perfect G&T, variety is the spice of life. One of the reasons gin remains so popular is that it can carry big flavours, so make the most of it.</p>
-        <p><i class="far fa-lightbulb"></i> Holland done it first! Gin is England's national spirit and there are few things more English than a refreshing gin & tonic. Most of the most famous gins you see around the world hail from the UK, so it is forgivable to think that the spirit first came from here. The English actually discovered gin when they were fighting the Thirty Years' War in the 17th century in Holland and saw Dutch soldiers drinking Jenever to boost morale before heading into battle. The term “Dutch Courage” was born, and the English brought the idea of making and drinking gin back with them. It would take another 150 years before they would have their own version.</p>
-      </div>
     </section>
     <!-- /.gin introduction -->
     <hr>
     <!-- All About Gin -->
     <br>
+    <h3>Experts Top 10 Ranked Gin Brands</h3>
+    <p id="experts">Our editors have reached out to the gin-connoisseurs of the world and asked them, "What gins are ranked best in their category?" Lo and behold, they gave us their top ranked gins for each category, which makes our and your lives so much easier. They have done the hard work for us! Hopefully the list below helps you when it comes to making your favourite gin cocktails, with some quick fun-facts along the way. Cheers! <i class="fas fa-glass-cheers"></i></p>
+    <br>
     <div class="container">
       <div class="row">
         <div class="col-md-4"><img src="assets/images/bathtub-gin.png" alt="bathtub gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#1 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#1</p>
           <h4>Ableforth's Bathtub Gin 70cl, 43%</h4>
           <h6 class="best-for">Best for a Dry Martini</h6>
           <p class="price">£25.00</p>
@@ -79,7 +73,7 @@
       <div class="row">
         <div class="col-md-4"><img src="assets/images/east-london-gin.png" alt="east london gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#2 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#2</p>
           <h4>East London Liquor Company 70cl, 40%</h4>
           <h6 class="best-for">Best for Everyday Gin</h6>
           <p class="price">£21.95</p>
@@ -95,7 +89,7 @@
       <div class="row">
         <div class="col-md-4"><img src="assets/images/chapel-down-gin.png" alt="chapel down gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#3 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#3</p>
           <h4>Chapel Down Bacchus Gin 70cl, 41.2%</h4>
           <h6>Best for a Gimlet</h6>
           <p class="price">£34.45</p>
@@ -107,11 +101,15 @@
         </div>
       </div>
       <br>
+      <div class="container-fluid quick-facts">
+          <i class="fas fa-cocktail"></i><h5>Quick Fact #1</h5>
+          <p>Unlike drinks that are classified according to their distilling technique or the ingredients used, gin is a matter of taste. By which we mean that gin is only gin if it has juniper as its predominant flavour and an alcohol content of at least 37.5% ABV.</p>
+      </div>
       <br>
       <div class="row">
         <div class="col-sm-4"><img src="assets/images/hendricks-gin.png" alt="hendricks gin" width="95%" height="auto"></div>
         <div class="col-sm-8">
-          <p class="gin-rank">#4 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#4</p>
           <h4>Hendrick's Gin 70cl, 41%</h4>
           <h6 class="best-for">Best with Cucumber</h6>
           <p class="price">£25.00</p>
@@ -127,7 +125,7 @@
       <div class="row">
         <div class="col-sm-4"><img src="assets/images/four-pillars-gin.png" alt="four pillars gin" width="95%" height="auto"></div>
         <div class="col-sm-8">
-          <p class="gin-rank">#5 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#5</p>
           <h4>Four Pillars Olive Leaf Gin 70cl, 43.8%</h4>
           <h6 class="best-for">Best for a Dirty Martini</h6>
           <p class="price">£39.99</p>
@@ -139,11 +137,15 @@
         </div>
       </div>
       <br>
+      <div class="container-fluid quick-facts">
+        <i class="fas fa-cocktail"></i><h5>Quick Fact #2</h5>
+        <p>Now, we may be a nation of gin and tonic devotees, but that doesn't mean that your imagination has to stop at 'ice and a slice' (of lemon, or even lime) when making one. Take a look at the bottle to find what botanicals your gin was made with and choose a few as your garnish. Cucumber, coriander, chilli, a bay leaf, a twist of black pepper - when it comes to the perfect G&T, variety is the spice of life. One of the reasons gin remains so popular is that it can carry big flavours, so make the most of it.</p>
+      </div>
       <br>
       <div class="row">
         <div class="col-md-4"><img src="assets/images/silent-pool-gin.png" alt="silent pool gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#6 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#6</p>
           <h4>Silent Pool Rare Citrus Gin 70cl, 43%</h4>
           <h6 class="best-for">Best for Negronis</h6>
           <p class="price">£37.95</p>
@@ -159,7 +161,7 @@
       <div class="row">
         <div class="col-md-4"><img src="assets/images/monkey-gin.png" alt="monkey dry gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#7 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#7</p>
           <h4>Monkey 47 Schwarzwald Dry Gin 50cl, 47%</h4>
           <h6 class="best-for">Best Gin to Gift</h6>
           <p class="price">£35.40</p>
@@ -171,11 +173,15 @@
         </div>
       </div>
       <br>
+      <div class="container-fluid quick-facts">
+        <i class="fas fa-cocktail"></i><h5>Quick Fact #3</h5>
+        <p>Holland done it first! Gin is England's national spirit and there are few things more English than a refreshing gin & tonic. Most of the most famous gins you see around the world hail from the UK, so it is forgivable to think that the spirit first came from here. The English actually discovered gin when they were fighting the Thirty Years' War in the 17th century in Holland and saw Dutch soldiers drinking Jenever to boost morale before heading into battle. The term “Dutch Courage” was born, and the English brought the idea of making and drinking gin back with them. It would take another 150 years before they would have their own version.</p>
+      </div>
       <br>
       <div class="row">
         <div class="col-md-4"><img src="assets/images/cotswolds-gin.png" alt="cotswolds gin" width="95%" height="auto"></div>
         <div class="col-md-8">
-          <p class="gin-rank">#8 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#8</p>
           <h4>The Cotswolds Distillery Wildflower Gin 70cl, 41.7%</h4>
           <h6 class="best-for">Best Floral Gin</h6>
           <p class="price">£34.95</p>
@@ -191,7 +197,7 @@
       <div class="row">
         <div class="col-sm-4"><img src="assets/images/mirabeau-rose-gin.png" alt="mirabeau rose gin" width="95%" height="auto"></div>
         <div class="col-sm-8">
-          <p class="gin-rank">#9 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#9</p>
           <h4>Mirabeau Rose Gin 70cl, 43%</h4>
           <h6 class="best-for">Best Pink Gin</h6>
           <p class="price">£30.00</p>
@@ -207,7 +213,7 @@
       <div class="row">
         <div class="col-sm-4"><img src="assets/images/tanqueray-blackcurrant-gin.png" alt="tanqueray blackcurrant gin" width="95%" height="auto"></div>
         <div class="col-sm-8">
-          <p class="gin-rank">#10 <i class="fas fa-cocktail"></i></p>
+          <p class="gin-rank">#10</p>
           <h4>Tanqueray Blackcurrant Royale Gin 70cl, 41.3%</h4>
           <h6 class="best-for">Best Blackcurrant Gin</h6>
           <p class="price">£19.00</p>
