add the faces of the bartenders to the book a class page

--- a/bookaclass.html
+++ b/bookaclass.html
@@ -45,7 +45,31 @@
       </div>
     </nav>
     <!-- /.navbar -->
-    
+    <hr>
+    <!-- Meet Your Bartenders -->
+    <section class="bartender-intro">
+      <h3>Meet Your Bartenders</h3>
+      <p>These lovely bartenders, have a combined experience of 34 years, delivering fantastically-made cocktails, but most of all, specialising in gin-cocktails.</p>
+      <p>When you book a class with us, you will be taught by one of these bartenders and learn so much from their years of experience.</p>
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2 col-md-6 col-lg-12 bartenders">
+            <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"></span>
+            <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"></span>
+            <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"></span>
+            <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"></span>
+            <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"></span>
+            <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"></span>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <p>So what are you waiting for? Book a class now!</p>
+    </section>
+    <!-- /.meet your bartenders -->
     <hr>
     <!-- Footer -->
     <section>
