adjust bartender image positions based on media device

--- a/bookaclass.html
+++ b/bookaclass.html
@@ -55,13 +55,13 @@
       <br>
       <div class="container">
         <div class="row">
-          <div class="col-sm-2 col-md-6 col-lg-12 bartenders">
-            <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"></span>
-            <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"></span>
-            <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"></span>
-            <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"></span>
-            <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"></span>
-            <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"></span>
+          <div class="bartenders">
+            <span><img class="circle" src="assets/images/bartender-1.png" alt="bartender 1"><br><p class="bartender-info">Jamie, 27<br>5 years of experience<br>Favourite gin cocktail:<br>Blackberry Gin</p></span>
+            <span><img class="circle" src="assets/images/bartender-2.png" alt="bartender 2"><br><p class="bartender-info">Sarah, 29<br>4 years of experience<br>Favourite gin cocktail:<br>Gimlet Gin</p></span>
+            <span><img class="circle" src="assets/images/bartender-3.png" alt="bartender 3"><br><p class="bartender-info">José, 33<br>10 years of experience<br>Favourite gin cocktail:<br>Gin Fizz</p></span>
+            <span><img class="circle" src="assets/images/bartender-4.png" alt="bartender 4"><br><p class="bartender-info">Laurel, 30<br>6 years of experience<br>Favourite gin cocktail:<br>Classic Gin Martini</p></span>
+            <span><img class="circle" src="assets/images/bartender-5.png" alt="bartender 5"><br><p class="bartender-info">Lawrence, 31<br>5 years of experience<br>Favourite gin cocktail:<br>Gin Sling</p></span>
+            <span><img class="circle" src="assets/images/bartender-6.png" alt="bartender 6"><br><p class="bartender-info">Tolu, 28<br>4 years of experience<br>Favourite gin cocktail:<br>Tom Collins</p></span>
           </div>
         </div>
       </div>
