--- a/allaboutgin.html
+++ b/allaboutgin.html
@@ -249,7 +249,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="#">Book Now</a>
+            <a class="btn btn-light" href="bookaclass.html">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
