--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     </nav>
     <!-- /.navbar -->
     <!-- Book a class -->
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="assets/images/hero-image-rangpur-gin.jpg" alt="rangpur gin">
+    <div>
+      <img src="assets/images/rangpur-gin-2560-1000.png" class="img-fluid" alt="Rangpur Gin">
       <div class="card-img-overlay">
         <p class="card-title">Love Gin?</p>
         <p class="card-text">Learn how to make your favourite gin-based drinks with us!*</p>
-        <a class="btn btn-light stretched-link" href="#">Book Now</a>
+        <a class="btn btn-light stretched-link" href="bookaclass.html">Book Now</a>
       </div>
       <div class="card-img-overlay">
-        <p class="card-text text-muted">*You must be at least 18 years old to book a class with us.</p>
+        <p class="disclaimer">*You must be at least 18 years old to book a class with us.</p>
       </div>
     </div>
     <!-- /.book a class -->
@@ -179,7 +179,7 @@
         <section>
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Book a class with us!</span>
-            <a class="btn btn-light" href="#">Book Now</a>
+            <a class="btn btn-light" href="bookaclass.html">Book Now</a>
           </p>
         </section>
         <!-- ./section: CTA -->
